# tts-pause-audit

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: signals.md
docs/legacy/: pause_detect_dashscope.py
examples/: example_report.md
pause_detector/: __init__.py  __main__.py  audio_utils.py  llm.py  models.py  prompts.py  registry.py  text_align.py
pause_detector/tools/: __init__.py  detect_pauses.py  judge_pauses.py  report_pauses.py  run_pauses.py  transcribe.py
tests/: test_audio_utils.py  test_llm_config.py  test_prompts.py  test_text_align.py
