[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-pause-audit"
version = "0.1.0"
description = "Detect unnatural pauses in TTS audio with Qwen3-ASR + Qwen3-ForcedAligner, cross-verified with RMS energy valleys and judged by an OpenAI-compatible LLM."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "notedit" },
]
keywords = ["tts", "asr", "qwen3", "pause-detection", "forced-alignment", "audio-quality"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "qwen-asr>=0.0.6",
  "openai>=1.40",
  "numpy",
  "soundfile",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/notedit/tts-pause-audit"
Repository = "https://github.com/notedit/tts-pause-audit"
Issues = "https://github.com/notedit/tts-pause-audit/issues"

[project.scripts]
tts-pause-audit = "pause_detector.__main__:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["pause_detector*"] } }
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # long lines are fine for Chinese prompts
